--- a/EmpowerIDTest.Client/EmpowerIDTest.Client/App.axaml
+++ b/EmpowerIDTest.Client/EmpowerIDTest.Client/App.axaml
@@ -34,6 +34,10 @@
         <StyleInclude Source="avares://Material.Icons.Avalonia/App.xaml"/>
         <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Fluent.xaml"/>
 
+        <Style Selector="TextBlock">
+            <Setter Property="Foreground" Value="White"/>
+        </Style>
+
 		<Style Selector="TextBlock.h1">
 			<Setter Property="FontWeight" Value="Bold"/>
 			<Setter Property="FontSize" Value="24"/>
