--- a/EmpowerIDTest.Client/EmpowerIDTest.Client/Views/MainView.axaml
+++ b/EmpowerIDTest.Client/EmpowerIDTest.Client/Views/MainView.axaml
@@ -5,7 +5,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewModels="clr-namespace:EmpowerIDTest.Client.ViewModels"
     xmlns:dialogs="clr-namespace:EmpowerIDTest.Client.ViewModels.Dialogs"
-    xmlns:views="clr-namespace:EmpowerIDTest.Client.Views"
+    xmlns:views="clr-namespace:EmpowerIDTest.Client.Views" 
+    xmlns:system="clr-namespace:System;assembly=System.Runtime"
     mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
     x:Class="EmpowerIDTest.Client.Views.MainView">
     
@@ -19,6 +20,7 @@
         </Panel>
 
 		<Border 
+            Margin="0,50,0,0"
             Background="#60000000"
             IsVisible="{Binding Dialog, Converter={StaticResource IsNotNullConverter}}">
 
@@ -26,7 +28,6 @@
                 <ContentControl.DataTemplates>
                     <DataTemplate DataType="dialogs:EmployeeDialogViewModel">
                         <Border
-                            MinWidth="500"
                             Padding="25,15"
                             Margin="20"
                             Background="{StaticResource SystemChromeLowColor}"
@@ -35,9 +36,10 @@
                             BorderBrush="#40808000"
                             VerticalAlignment="Center"
                             HorizontalAlignment="Center"
-                            BoxShadow="0 0 10 5 Black">
+                            BoxShadow="0 0 10 5 Black"
+                            Width="340">
 
-							<StackPanel Spacing="10">
+                            <StackPanel Spacing="10">
                                 <TextBlock Classes="h1" Text="{Binding Title}"/>
 
 								<Grid Margin="0,10,0,0" ColumnDefinitions="Auto,*" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto">
